--- a/src/Components/FlightsForm/Flights.css
+++ b/src/Components/FlightsForm/Flights.css
@@ -38,3 +38,136 @@ form {
     left: 13.5rem;
 
 }
+
+
+
+/* Flights  display*/
+
+.ListItem {
+    width: 98%;
+    height: 13rem;
+    margin: 1rem;
+    border-radius: 20px;
+    background-color: #f9f9f9;
+    position: relative;
+    left: -1rem;
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    gap: 4rem;
+}
+.accordion-body {
+    position: relative;
+    width: 100%;
+    height: 15rem;
+    background-color: white;
+    border-radius: 20px;
+    padding: 0.5rem 1rem;
+}
+
+ul li {
+    list-style: none;
+}
+.result-header {
+    margin:1rem 0 0  4rem;
+}
+.rightResult {
+    display: flex;
+}
+
+small{
+    font-size: 15px;
+}
+.cabin{
+    height: 10rem;
+    margin-right: 1rem;
+}
+.leftResults table tr {
+    display: flex;
+}
+td {
+    font-size: 30px;
+    font-weight: bolder;
+}
+.leftResults{
+    padding: 0.5rem 0 0 0 1rem ;
+}
+.plane {
+    width: 2rem;
+    height: 2rem;
+    margin-left: 5rem;
+}
+
+
+.itt {
+    padding: 1rem !important;
+    border-radius: 20px !important;
+}
+#ResultContainer {
+    width: 100%;
+    z-index: 1;
+    position: relative;
+
+}
+
+.flight-search-form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    background-color: #f9f9f9;
+    padding: 20px;
+    margin-top: 2rem;
+    width: 50%;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .form-row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  label {
+    min-width: 120px;
+    font-weight: bold;
+  }
+  
+  select,
+  input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+  
+  button {
+    padding: 10px 20px;
+    background-color: #36454f;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  button:hover {
+    background-color:  #51bcc2;
+    color: black;
+  }
+  
+  /* Optional: Adjust the width and style of the form as per your requirement */
+  @media screen and (max-width: 600px) {
+    .form-row {
+      flex-direction: column;
+    }
+  
+    label {
+      min-width: unset;
+    }
+  }
+  
+
+
